# SuperheroesAPI_fetch

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: flowchart  get_super_heroes_data.py
